--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,138 +12,7 @@
   margin-top: 10px;
 }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  margin: 5px;
-  border-radius: 5px;
-  max-width: 300px;
-}
-
-.card-title {
-  font-weight: bold;
-  border-bottom: 1px solid gray;
-  padding: 10px;
-}
-
-.card-body {
-  padding: 10px;
-  max-height: 200px;
-  margin-bottom: 10px;
+.card-desc {
+  max-height: 100px;
   overflow: hidden;
-}
-
-.card-body .card-info {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.card-footer {
-  border-top: 1px solid gray;
-  padding: 10px;
-}
-
-.card-footer button {
-  border: 0;
-  background-color: red;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.button-container {
-  padding: 10px;
-}
-
-.button-container button {
-  border: 0;
-  background-color: rgb(91, 91, 228);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
- /* The Modal (background) */
- .popup {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.popup-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-} 
-
-
-.form-group {
-  margin-bottom: 1rem;
-  width: 100%;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: .5rem;
-}
-
-.form-control {
-  display: block;
-  /* width: 100%; */
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  /* line-height: 1.5; */
-  color: #495057;
-  background-color: #fff;
-  /* background-clip: padding-box; */
-  border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.submit-button {
-  margin-top: 10px;
-  border: 0;
-  background-color: rgb(91, 91, 228);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.card-image img {
-  width: 100%;
-}
-
-.edit-button {
-  background-color: green !important;
-  margin-right: 10px;
 }
